# surface-registration-tool

./: CMakeLists.txt  README.md  data_io.cpp  data_io.h  observe_error.h  surface_registartion.h  surface_registration.cpp  surface_registration.h  surface_registration_tool.ui  vtkITKIterativeCloestPoint.cxx  vtkITKIterativeCloestPoint.h  vtkPCA_ICP_Transform.cxx  vtkPCA_ICP_Transform.h
data/: Dental(shift mid point to origin).vtk  Dental(shift mid point toorigin)_2.stl  Develop tool only.stl  Reference with develop tool.vtk
main/: delegate.cpp  delegate.h  main.cpp  mainWindow.cpp  mainWindow.h  surface_registration_tool.ui
